# thaumaturgy

./: .gitignore  Makefile  NOTICE  README.md  pyproject.toml
scripts/: install_latest_llama_cpp.py
thaumaturgy/: __init__.py  appstate.py  engine.py  hf_download.py  llama_bins.py  main.py  metadata_gguf.py  paths.py  statevars.py  store.py  theme.py
thaumaturgy/defaults/scenarios/: Grondar Alehammer.yaml  Moonlit Parley.yaml  Technical Planning Assistant.yaml
thaumaturgy/plugins/: __init__.py  compaction.py
thaumaturgy/ui/: characters_page.py  chat_page.py  model_page.py  scenarios_page.py
